# multi-agent-rag-chatbot

./: .env.example  ARCHITECTURE_FLOW.md  FLOW_DIAGRAM.md  README.md  pyproject.toml
data/golden_datasets/: README.md  finance.jsonl  general_knowledge.jsonl  hr.jsonl  legal.jsonl  multi_agent.jsonl  routing.jsonl  tech.jsonl
data/handbooks/: finance_handbook.md  general_handbook.md  hr_handbook.md  legal_handbook.md  tech_handbook.md
data/jsonl/: finance_handbook_chunks.jsonl  general_handbook_chunks.jsonl  hr_handbook_chunks.jsonl  legal_handbook_chunks.jsonl  tech_handbook_chunks.jsonl
data/vectorstore/finance_handbook/: chroma.sqlite3
data/vectorstore/general_handbook/: chroma.sqlite3
data/vectorstore/hr_handbook/: chroma.sqlite3
data/vectorstore/legal_handbook/: chroma.sqlite3
data/vectorstore/tech_handbook/: chroma.sqlite3
reports/: REPORT.md
src/: __init__.py  build_index.py  main.py
src/agents/: __init__.py  base_agent.py  orchestrator.py  specialist_agents.py
src/config/: __init__.py  config.py
src/evaluation/: LANGFUSE_EVALUATOR.md  __init__.py  langfuse_evaluator.py  test_runner.py
src/indexing/: __init__.py  chunking.py  embeddings.py  parsing.py
src/querying/: __init__.py  models.py  routes.py
src/querying/agents/: __init__.py  base_agent.py  orchestrator.py  specialist_agents.py
src/querying/tools/: __init__.py  rag_tool.py  vector_store_manager.py
src/utils/: __init__.py  llm.py  storage.py
tests/: test_runner.py
